Your commit message

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Display MFTPlane.tx</title>
 </head>
 <body>
+
+
+  <h1>BAT TEST 1 </h1>
+
+
     <h1>Display MFTPlane.txt</h1>
     <object data="MFTPlane.txt" type="text/plain" width="100%" height="500">
         Your browser does not support displaying this file.
