--- a/index.html
+++ b/index.html
@@ -8,20 +8,11 @@
 <body>
 
 
-  <h1>BAT TEST 6 </h1>
-
-
-    <h1>Display MFTPlane.txt</h1>
+  <h1>Plane Data</h1>
     <object data="MFTPlane.txt" type="text/plain" width="100%" height="500">
         Your browser does not support displaying this file.
     </object>
 
-    <h1>MFTPlane.txt - Check downloads or go to Google doc to review </h1>
-    <iframe 
-        src="https://drive.google.com/uc?export=download&id=13ybhJsxj5qW8gOhwEG59a-PuwL0Faly4" 
-        width="100%" 
-        height="600" 
-        style="border: none;">
-    </iframe>
+
 </body>
 </html>
