--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -28,6 +28,14 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
+
+      <h1>MFTPlane.txt - Check downloads or go to Google doc to review </h1>
+    <iframe 
+        src="https://drive.google.com/uc?export=download&id=13ybhJsxj5qW8gOhwEG59a-PuwL0Faly4" 
+        width="100%" 
+        height="600" 
+        style="border: none;">
+    </iframe>
   * Template Name: Folio
   * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
   * Updated: Aug 08 2024 with Bootstrap v5.3.3
